fix composition panel overflow

--- a/scopes/compositions/compositions/compositions.module.scss
+++ b/scopes/compositions/compositions/compositions.module.scss
@@ -97,3 +97,8 @@ $panelBg: #fafafa;
 .buildStatusMessage {
   margin: auto;
 }
+
+.compositionPanel {
+  display: flex;
+  flex: 1;
+}
